[project]
name = "pocketcasts-latest-downloader"
version = "0.8.1"
description = "Pocketcasts Episoders downloader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.4.0",
    "certifi==2024.7.4",
    "docopt==0.6.2",
    "h11==0.16.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.7",
    "pytaglib>=3.0.1",
    "python-dotenv==1.0.1",
    "sniffio==1.3.1",
]
