[project]
name = "pocketcasts-latest-downloader"
version = "0.8.4"
description = "Pocketcasts Episodes downloader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "docopt-ng>=0.9.0",
    "h11>=0.15.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "pytaglib>=3.0.1; sys_platform=='darwin'",
    "pytaglib>=3.0.1; sys_platform=='windows'",
    "pytaglib==2.0.0; sys_platform=='linux'",
    "python-dotenv==1.2.1",
    "sniffio==1.3.1",
]
